<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/tvModuleCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulecode"/>

    <TextView
        android:id="@+id/tvModuleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulename"/>

    <TextView
        android:id="@+id/tvAcademicYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/academicyear"/>

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester"/>

    <TextView
        android:id="@+id/tvModuleCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulecredit"/>

    <TextView
        android:id="@+id/tvVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue"/>

    <ImageView
        android:id="@+id/imgDisplay"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />


</LinearLayout>